--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -37,7 +37,7 @@
         "allowed_file_extensions": [ "js", "json", "jshintrc", "jsbeautifyrc",
             "bowerrc", "ops"
         ],
-        "brace_style": "end-expand", // [collapse|expand|end-expand|none] Put braces on the same line as control statements (default), or put braces on own line (Allman / ANSI style), or just put end braces on own line, or attempt to keep them where they are
+        "brace_style": "collapse", // [collapse|expand|end-expand|none] Put braces on the same line as control statements (default), or put braces on own line (Allman / ANSI style), or just put end braces on own line, or attempt to keep them where they are
         "break_chained_methods": true, // Break chained method calls across subsequent lines
         "e4x": false, // Pass E4X xml literals through untouched
         "end_with_newline": false, // End output with newline
